--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,16 +1,16 @@
-name: Project check
+name: Deploy to GitHub-Pages
 
 on:
   push:
     branches:
       - master
-  pull_request:
-    branches:
-      - '*'
 
 jobs:
-  check:
-    name: Check
+  deploy:
+    name: Deploy
+
+    permissions:
+      contents: write
 
     runs-on: ubuntu-latest
 
@@ -34,7 +34,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run checks
-        run: npm run lint
-        env:
-          FORCE_COLOR: true
+      - name: Build project
+        run: npm run build
+
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: ./build
+          branch: gh-pages
