--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "КэтЭнерджи",
+  "name": "cat",
   "version": "1.0.0",
   "private": true,
   "description": "Личный проект «{{projectTitle}}» от HTML Academy",
